--- a/app/views/form/password-forgot.phtml
+++ b/app/views/form/password-forgot.phtml
@@ -4,7 +4,7 @@ use Chayka\Helpers\Util;
 use Chayka\WP\Helpers\NlsHelper;
 
 ?>
-<div class="form_screen screen_forgot_password" data-ng-controller="password-forgot" data-screen-title="<?php NlsHelper::__('header_forgot_password_screen');?>">
+<div class="form_screen screen_forgot_password" data-ng-controller="password-forgot" data-screen-title="<?php NlsHelper::__('header_forgot_password_screen');?>" data-ng-show="isOpen">
     <h2><?php NlsHelper::__('header_forgot_password_screen')?></h2>
     <form data-ng-submit="buttonSendCodeClicked()" data-form-validator="validator">
 <!--        <input type="submit" style="position: absolute; left: -9999px; width: 1px; height: 1px;"/>-->
