--- a/app/views/form/join.phtml
+++ b/app/views/form/join.phtml
@@ -4,7 +4,7 @@ use Chayka\Helpers\Util;
 use Chayka\WP\Helpers\NlsHelper;
 
 ?>
-<div class="form_screen screen_join" data-ng-controller="join" data-screen-title="<?php NlsHelper::__('header_join_screen')?>">
+<div class="form_screen screen_join" data-ng-controller="join" data-screen-title="<?php NlsHelper::__('header_join_screen')?>" data-ng-show="isOpen">
     <h2><?php NlsHelper::__('header_join_screen')?></h2>
     <form data-ng-submit="buttonJoinClicked()" data-form-validator="validator">
 <!--        <input type="submit" style="position: absolute; left: -9999px; width: 1px; height: 1px;"/>-->
