--- a/app/views/form/login.phtml
+++ b/app/views/form/login.phtml
@@ -7,7 +7,7 @@ $areSocialsAvailable = $isFbApiAvailable;
 
 ?>
 
-<div data-ng-controller="login" class="form_screen screen_login" data-screen-title="<?php NlsHelper::__('header_login_screen');?>">
+<div data-ng-controller="login" class="form_screen screen_login" data-screen-title="<?php NlsHelper::__('header_login_screen');?>" data-ng-show="isOpen">
     <h2><?php NlsHelper::__('header_login_screen');?></h2>
     <form data-ng-submit="buttonLoginClicked()" data-form-validator="validator">
 <!--        <input type="submit" style="position: absolute; left: -9999px; width: 1px; height: 1px;"/>-->
@@ -32,10 +32,10 @@ $areSocialsAvailable = $isFbApiAvailable;
         </div>
         <div class="form_results">
             <div data-spinner="spinner"></div>
-            <div class="form_message" data-ng-show="!!message">{{message}}</div>
+            <div data-form-message class="form_message"></div>
         </div>
         <div class="form_buttons">
-            <button data-ng-click="buttonLoginClicked()" class="button_login"><?php NlsHelper::__('button_login');?></button>
+            <button class="button_login"><?php NlsHelper::__('button_login');?></button>
         </div>
     </form>
 
