--- a/app/views/form/logout.phtml
+++ b/app/views/form/logout.phtml
@@ -3,7 +3,7 @@
 use Chayka\WP\Helpers\NlsHelper;
 
 ?>
-<div class="form_screen screen_logout" data-ng-controller="logout" data-screen-title="<?php NlsHelper::__('header_logout_screen');?>">
+<div class="form_screen screen_logout" data-ng-controller="logout" data-screen-title="<?php NlsHelper::__('header_logout_screen');?>" data-ng-show="isOpen">
     <h2><?php NlsHelper::__('header_logout_screen');?></h2>
     <form>
         <div class="form_box-comments">
