--- a/app/views/form/password-change.phtml
+++ b/app/views/form/password-change.phtml
@@ -5,7 +5,7 @@ use Chayka\WP\Helpers\NlsHelper;
 
 ?>
 
-<div class="form_screen screen_change_password" data-ng-controller="password-change" data-screen-title="<?php NlsHelper::__('header_change_password_screen');?>">
+<div class="form_screen screen_change_password" data-ng-controller="password-change" data-screen-title="<?php NlsHelper::__('header_change_password_screen');?>" data-ng-show="isOpen">
     <h2><?php NlsHelper::__('header_change_password_screen');?></h2>
     <form data-ng-submit="buttonChangePasswordClicked()" data-form-validator="validator">
 <!--        <input type="submit" style="position: absolute; left: -9999px; width: 1px; height: 1px;"/>-->
