--- a/app/views/form/form.phtml
+++ b/app/views/form/form.phtml
@@ -6,7 +6,7 @@
  * Time: 14:58
  */
 
-use Chayka\WP\Helpers\NlsHelper;
+use Chayka\Helpers\NlsHelper;
 
 $this->declareVars(array(
     'titleLocation'=>'header',
