--- a/app/views/form/login.phtml
+++ b/app/views/form/login.phtml
@@ -1,6 +1,6 @@
 <?php
 use Chayka\Helpers\Util;
-use Chayka\WP\Helpers\NlsHelper;
+use Chayka\Helpers\NlsHelper;
 
 $isFbApiAvailable = class_exists('Chayka\\Facebook\\FacebookHelper');
 $areSocialsAvailable = $isFbApiAvailable;
