--- a/app/views/form/password-change.phtml
+++ b/app/views/form/password-change.phtml
@@ -1,7 +1,7 @@
 <?php
 
 use Chayka\Helpers\Util;
-use Chayka\WP\Helpers\NlsHelper;
+use Chayka\Helpers\NlsHelper;
 
 ?>
 
@@ -23,11 +23,10 @@ use Chayka\WP\Helpers\NlsHelper;
         </div>
         <div class="form_results">
             <div data-spinner="spinner"></div>
-            <div class="form_message" data-ng-show="!!message">{{message}}</div>
+            <div data-form-message class="form_message"></div>
         </div>
         <div class="form_buttons">
-            <button data-ng-click="buttonChangePasswordClicked()" class="button_password_change"><?php NlsHelper::__('button_password_change');?></button>
-            <button data-ng-click="buttonResetPasswordClicked()" class="button_password_reset"><?php NlsHelper::__('button_password_reset');?></button>
+            <button class="button_password_change"><?php NlsHelper::__('button_password_change');?></button>
         </div>
     </form>
 </div>
