--- a/app/views/form/password-forgot.phtml
+++ b/app/views/form/password-forgot.phtml
@@ -1,7 +1,7 @@
 <?php
 
 use Chayka\Helpers\Util;
-use Chayka\WP\Helpers\NlsHelper;
+use Chayka\Helpers\NlsHelper;
 
 ?>
 <div class="form_screen screen_forgot_password" data-ng-controller="password-forgot" data-screen-title="<?php NlsHelper::__('header_forgot_password_screen');?>" data-ng-show="isOpen">
@@ -17,7 +17,7 @@ use Chayka\WP\Helpers\NlsHelper;
         </div>
         <div class="form_results">
             <div data-spinner="spinner"></div>
-            <div class="form_message" data-ng-show="!!message">{{message}}</div>
+            <div data-form-message class="form_message"></div>
         </div>
         <div class="form_buttons">
             <button data-ng-click="buttonSendCodeClicked()" class="button_send_code"><?php NlsHelper::__('button_send_code');?></button>
