--- a/app/views/form/join.phtml
+++ b/app/views/form/join.phtml
@@ -1,12 +1,12 @@
 <?php
 
 use Chayka\Helpers\Util;
-use Chayka\WP\Helpers\NlsHelper;
+use Chayka\Helpers\NlsHelper;
 
 ?>
 <div class="form_screen screen_join" data-ng-controller="join" data-screen-title="<?php NlsHelper::__('header_join_screen')?>" data-ng-show="isOpen">
     <h2><?php NlsHelper::__('header_join_screen')?></h2>
-    <form data-ng-submit="buttonJoinClicked()" data-form-validator="validator">
+    <form data-ng-submit="buttonJoinClicked()" data-form-validator="validator" novalidate="novalidate">
 <!--        <input type="submit" style="position: absolute; left: -9999px; width: 1px; height: 1px;"/>-->
         <div class="form_field email_join" data-form-field="email" data-check-email="<?php NlsHelper::__('message_validate_email', 'member@'.Util::serverName())?>" data-check-required="<?php NlsHelper::__('message_required');?>">
             <label><?php NlsHelper::__('label_email')?>:</label>
@@ -22,7 +22,7 @@ use Chayka\WP\Helpers\NlsHelper;
 <!--        </div>-->
         <div class="form_results">
             <div data-spinner="spinner"></div>
-            <div class="form_message" data-ng-show="!!message">{{message}}</div>
+            <div data-form-message class="form_message"></div>
         </div>
         <div class="form_buttons">
             <button data-ng-click="buttonJoinClicked()" class="button_join"><?php NlsHelper::__('button_join');?></button>
