--- a/app/views/form/password-reset.phtml
+++ b/app/views/form/password-reset.phtml
@@ -1,7 +1,28 @@
 <?php
-/**
- * Created by PhpStorm.
- * User: borismossounov
- * Date: 27.10.14
- * Time: 15:05
- */ 
+
+use Chayka\Helpers\Util;
+use Chayka\Helpers\NlsHelper;
+
+?>
+
+<div class="form_screen screen_reset_password" data-ng-controller="password-reset" data-screen-title="<?php NlsHelper::__('header_change_password_screen');?>" data-ng-show="isOpen">
+    <h2><?php NlsHelper::__('header_change_password_screen');?></h2>
+    <form data-ng-submit="buttonResetPasswordClicked()" data-form-validator="validator">
+        <!--        <input type="submit" style="position: absolute; left: -9999px; width: 1px; height: 1px;"/>-->
+        <div class="form_field password1" data-form-field="password1" data-check-required="<?php NlsHelper::__('message_required');?>">
+            <label><?php NlsHelper::__('label_new_pass');?>:</label>
+            <input type="password" data-ng-model="password1"/>
+        </div>
+        <div class="form_field password2" data-form-field="password2" data-check-required="<?php NlsHelper::__('message_required');?>" data-check-passwords="password1">
+            <label><?php NlsHelper::__('label_once_again');?>:</label>
+            <input type="password" data-ng-model="password2"/>
+        </div>
+        <div class="form_results">
+            <div data-spinner="spinner"></div>
+            <div class="form_message" data-ng-show="!!message">{{message}}</div>
+        </div>
+        <div class="form_buttons">
+            <button data-ng-click="buttonResetPasswordClicked()" class="button_password_reset"><?php NlsHelper::__('button_password_reset');?></button>
+        </div>
+    </form>
+</div>
