--- a/app/views/form/password-forgot.phtml
+++ b/app/views/form/password-forgot.phtml
@@ -4,7 +4,7 @@ use Chayka\Helpers\Util;
 use Chayka\Helpers\NlsHelper;
 
 ?>
-<div class="form_screen screen_forgot_password" data-ng-controller="password-forgot" data-screen-title="<?php NlsHelper::__('header_forgot_password_screen');?>" data-ng-show="isOpen">
+<div class="form_screen screen_forgot_password ng-cloak" data-ng-controller="password-forgot" data-screen-title="<?php NlsHelper::__('header_forgot_password_screen');?>" data-ng-show="isOpen">
     <h2><?php NlsHelper::__('header_forgot_password_screen')?></h2>
     <form data-ng-submit="buttonSendCodeClicked()" data-form-validator="validator">
 <!--        <input type="submit" style="position: absolute; left: -9999px; width: 1px; height: 1px;"/>-->
@@ -13,14 +13,14 @@ use Chayka\Helpers\NlsHelper;
         </div>
         <div class="form_field email_login" data-form-field="email" data-check-email="<?php NlsHelper::__('message_validate_email', 'member@'.Util::serverName())?>" data-check-required="<?php NlsHelper::__('message_required');?>">
             <label><?php NlsHelper::__('label_email')?>:</label>
-            <input type="text" data-ng-model="email" />
+            <input type="text" data-ng-model="fields.email" />
         </div>
         <div class="form_results">
             <div data-spinner="spinner"></div>
             <div data-form-message class="form_message"></div>
         </div>
         <div class="form_buttons">
-            <button data-ng-click="buttonSendCodeClicked()" class="button_send_code"><?php NlsHelper::__('button_send_code');?></button>
+            <button class="button_send_code"><?php NlsHelper::__('button_send_code');?></button>
         </div>
     </form>
 </div>
