--- a/app/views/form/password-change.phtml
+++ b/app/views/form/password-change.phtml
@@ -5,21 +5,21 @@ use Chayka\Helpers\NlsHelper;
 
 ?>
 
-<div class="form_screen screen_change_password" data-ng-controller="password-change" data-screen-title="<?php NlsHelper::__('header_change_password_screen');?>" data-ng-show="isOpen">
+<div class="form_screen screen_change_password ng-cloak" data-ng-controller="password-change" data-screen-title="<?php NlsHelper::__('header_change_password_screen');?>" data-ng-show="isOpen">
     <h2><?php NlsHelper::__('header_change_password_screen');?></h2>
     <form data-ng-submit="buttonChangePasswordClicked()" data-form-validator="validator">
 <!--        <input type="submit" style="position: absolute; left: -9999px; width: 1px; height: 1px;"/>-->
         <div class="form_field passwordOld" data-form-field="passwordOld" data-check-email="<?php NlsHelper::__('message_validate_email', 'member@'.Util::serverName())?>" data-check-required="<?php NlsHelper::__('message_required');?>">
             <label><?php NlsHelper::__('label_old_pass');?>:</label>
-            <input type="password" data-ng-model="passwordOld"/>
+            <input type="password" data-ng-model="fields.passwordOld"/>
         </div>
         <div class="form_field password1" data-form-field="password1" data-check-required="<?php NlsHelper::__('message_required');?>">
             <label><?php NlsHelper::__('label_new_pass');?>:</label>
-            <input type="password" data-ng-model="password1"/>
+            <input type="password" data-ng-model="fields.password1"/>
         </div>
         <div class="form_field password2" data-form-field="password2" data-check-required="<?php NlsHelper::__('message_required');?>" data-check-passwords="password1">
             <label><?php NlsHelper::__('label_once_again');?>:</label>
-            <input type="password" data-ng-model="password2"/>
+            <input type="password" data-ng-model="fields.password2"/>
         </div>
         <div class="form_results">
             <div data-spinner="spinner"></div>
