+ Change/reset Password

--- a/app/views/email/forgot-password.en.phtml
+++ b/app/views/email/forgot-password.en.phtml
@@ -8,5 +8,5 @@
     If that was unintentional request, just don't pay any attention on this email.
 </div>
 <div>
-    To set a new password, please follow this <a href="http://<?php echo $_SERVER['SERVER_NAME'].'?activationkey='.$this->activationKey.'&login=' . rawurlencode($this->user->getLogin());?>">link</a>
+    To set a new password, please follow this <a href="http://<?php echo $_SERVER['SERVER_NAME'].'?activationkey='.$this->activationKey. sprintf('%x', $this->user->getId());?>">link</a>
 </div>
