--- a/app/views/email/forgot-password.phtml
+++ b/app/views/email/forgot-password.phtml
@@ -9,5 +9,5 @@
     запрос, ничего не делайте и не обращайте внимания на это сообщение.
 </div>
 <div>
-    Чтобы изменить пароль перейдите по <a href="http://<?php echo $_SERVER['SERVER_NAME'].'?activationkey='.$this->activationKey.'&login=' . rawurlencode($this->user->getLogin());?>">ссылке</a>
+    Чтобы изменить пароль перейдите по <a href="http://<?php echo $_SERVER['SERVER_NAME'].'?activationkey='.$this->activationKey . sprintf('%x', $this->user->getId());?>">ссылке</a>
 </div>
