--- a/app/views/form/password-change.phtml
+++ b/app/views/form/password-change.phtml
@@ -9,9 +9,9 @@ use Chayka\Helpers\NlsHelper;
     <h2><?php NlsHelper::__('header_change_password_screen');?></h2>
     <form data-ng-submit="buttonChangePasswordClicked()" data-form-validator="validator">
 <!--        <input type="submit" style="position: absolute; left: -9999px; width: 1px; height: 1px;"/>-->
-        <div class="form_field passwordOld" data-form-field="passwordOld" data-check-email="<?php NlsHelper::__('message_validate_email', 'member@'.Util::serverName())?>" data-check-required="<?php NlsHelper::__('message_required');?>">
+        <div class="form_field password" data-form-field="password" data-check-required="<?php NlsHelper::__('message_required');?>">
             <label><?php NlsHelper::__('label_old_pass');?>:</label>
-            <input type="password" data-ng-model="fields.passwordOld"/>
+            <input type="password" data-ng-model="fields.password"/>
         </div>
         <div class="form_field password1" data-form-field="password1" data-check-required="<?php NlsHelper::__('message_required');?>">
             <label><?php NlsHelper::__('label_new_pass');?>:</label>
