--- a/app/views/form/password-reset.phtml
+++ b/app/views/form/password-reset.phtml
@@ -4,13 +4,12 @@ use Chayka\Helpers\NlsHelper;
 
 $this->declareVars(array(
     'key'=>'',
-    'login'=>'',
 ));
 
 
 ?>
 
-<div class="form_screen screen_reset_password ng-cloak" data-ng-controller="password-reset" data-screen-title="<?php NlsHelper::__('header_change_password_screen');?>" data-key="<?php echo $this->key;?>" data-login="<?php echo $this->login;?>" data-ng-show="isOpen">
+<div class="form_screen screen_reset_password ng-cloak" data-ng-controller="password-reset" data-screen-title="<?php NlsHelper::__('header_change_password_screen');?>" data-auth-key="<?php echo $this->key;?>" data-ng-show="isOpen">
     <h2><?php NlsHelper::__('header_change_password_screen');?></h2>
     <form data-ng-submit="buttonResetPasswordClicked()" data-form-validator="validator">
         <!--        <input type="submit" style="position: absolute; left: -9999px; width: 1px; height: 1px;"/>-->
