--- a/app/views/form/form.phtml
+++ b/app/views/form/form.phtml
@@ -28,22 +28,24 @@ $isFbApiAvailable = class_exists('Chayka\\Facebook\\FacebookHelper');
 $areSocialsAvailable = $isFbApiAvailable;
 ?>
 <div id="chayka-auth" class="ng-cloak" data-ng-controller="form" data-auth-screen="<?php echo $this->screen;?>" data-auth-mode="<?php echo $this->authMode;?>">
-    <div data-modal="modal" data-modal-show="<?php echo !!$$this->key;?>" >
+    <div data-modal="modal" data-modal-show="<?php echo $this->key?'1':'';?>" >
 <?php
     foreach($this->screens as $screen){
         echo $this->render('form/'.$screen.'.phtml');
     }
 ?>
-    <div class="form_box-links">
-        <a data-ng-click="window.console.dir(this);showLoginScreen();" data-tap-disabled="false" data-ng-hide="screen === 'login'" class="link" ><?php NlsHelper::__('link_login');?></a>
+    <div class="nav_links" data-ng-show="screen === 'login' || screen === 'join' || screen === 'password-forgot' || screen === 'password-reset'">
+        <a data-ng-click="showLoginScreen();" data-tap-disabled="false" data-ng-hide="screen === 'login'" class="link" ><?php NlsHelper::__('link_login');?></a>
         <a data-ng-click="showJoinScreen();" data-ng-hide="screen === 'join'" class="link" ><?php NlsHelper::__('link_join');?></a>
         <a data-ng-click="showForgotPasswordScreen();" data-ng-hide="screen === 'password-forgot'" class="link"><?php NlsHelper::__('link_forgot_password');?></a>
-        <a data-ng-click="showChangePasswordScreen();" data-ng-hide="screen === 'password-change'" class="link" ><?php NlsHelper::__('link_change_password');?></a>
     </div>
     <div class="clearfloat"></div>
     </div>
 </div>
 <script>
+    var Chayka = Chayka || {};
+    Chayka.Users = Chayka.Users || {};
+    Chayka.Users.currentUser = <?php echo \Chayka\WP\Helpers\JsonHelper::encode(\Chayka\WP\Models\UserModel::currentUser());?>;
     (function($, angular){
         $(document).ready(function(){
             angular.bootstrap(document.getElementById('chayka-auth'), ['chayka-auth'])
