--- a/app/views/form/join.phtml
+++ b/app/views/form/join.phtml
@@ -8,11 +8,11 @@ use Chayka\Helpers\NlsHelper;
     <h2><?php NlsHelper::__('header_join_screen')?></h2>
     <form data-ng-submit="buttonJoinClicked()" data-form-validator="validator" novalidate="novalidate">
 <!--        <input type="submit" style="position: absolute; left: -9999px; width: 1px; height: 1px;"/>-->
-        <div class="form_field email_join" data-form-field="email" data-check-required="<?php NlsHelper::__('message_required');?>" data-check-email="<?php NlsHelper::__('message_validate_email', 'member@'.Util::serverName())?>" data-check-api="/api/auth/check-email/email/{value}">
+        <div class="form_field email_join stretch" data-form-field="email" data-check-required="<?php NlsHelper::__('message_required');?>" data-check-email="<?php NlsHelper::__('message_validate_email', 'member@'.Util::serverName())?>" data-check-api="/api/auth/check-email/email/{value}||500">
             <label><?php NlsHelper::__('label_email')?>:</label>
             <input type="text" data-ng-model="fields.email" />
         </div>
-        <div class="form_field name" data-form-field="name" data-check-required="<?php NlsHelper::__('message_required');?>" data-check-regexp-pattern="^[A-Za-z\d\-]+$" data-check-regexp-message="<?php NlsHelper::__('message_validate_username');?>" data-check-api="/api/auth/check-name/login/{value}">
+        <div class="form_field name stretch" data-form-field="name" data-check-required="<?php NlsHelper::__('message_required');?>" data-check-regexp-pattern="^[A-Za-z\d\-]+$" data-check-regexp-message="<?php NlsHelper::__('message_validate_username');?>" data-check-api="/api/auth/check-name/login/{value}||500">
             <label><?php NlsHelper::__('label_username')?>:</label>
             <input type="text" data-ng-model="fields.name" />
         </div>
@@ -21,7 +21,7 @@ use Chayka\Helpers\NlsHelper;
 <!--            <input type="password" data-ng-model="password"/>-->
 <!--        </div>-->
         <div class="form_results">
-            <div data-spinner="spinner"></div>
+            <div data-spinner="spinner" class="form_spinner"></div>
             <div data-form-message class="form_message"></div>
         </div>
         <div class="form_buttons">
