--- a/app/views/form/password-change.phtml
+++ b/app/views/form/password-change.phtml
@@ -9,20 +9,20 @@ use Chayka\Helpers\NlsHelper;
     <h2><?php NlsHelper::__('header_change_password_screen');?></h2>
     <form data-ng-submit="buttonChangePasswordClicked()" data-form-validator="validator">
 <!--        <input type="submit" style="position: absolute; left: -9999px; width: 1px; height: 1px;"/>-->
-        <div class="form_field password" data-form-field="password" data-check-required="<?php NlsHelper::__('message_required');?>">
+        <div class="form_field password stretch" data-form-field="password" data-check-required="<?php NlsHelper::__('message_required');?>">
             <label><?php NlsHelper::__('label_old_pass');?>:</label>
             <input type="password" data-ng-model="fields.password"/>
         </div>
-        <div class="form_field password1" data-form-field="password1" data-check-required="<?php NlsHelper::__('message_required');?>">
+        <div class="form_field password1 stretch" data-form-field="password1" data-check-required="<?php NlsHelper::__('message_required');?>">
             <label><?php NlsHelper::__('label_new_pass');?>:</label>
             <input type="password" data-ng-model="fields.password1"/>
         </div>
-        <div class="form_field password2" data-form-field="password2" data-check-required="<?php NlsHelper::__('message_required');?>" data-check-passwords="password1">
+        <div class="form_field password2 stretch" data-form-field="password2" data-check-required="<?php NlsHelper::__('message_required');?>" data-check-passwords="password1">
             <label><?php NlsHelper::__('label_once_again');?>:</label>
             <input type="password" data-ng-model="fields.password2"/>
         </div>
         <div class="form_results">
-            <div data-spinner="spinner"></div>
+            <div data-spinner="spinner" class="form_spinner"></div>
             <div data-form-message class="form_message"></div>
         </div>
         <div class="form_buttons">
