--- a/app/views/form/password-forgot.phtml
+++ b/app/views/form/password-forgot.phtml
@@ -8,15 +8,15 @@ use Chayka\Helpers\NlsHelper;
     <h2><?php NlsHelper::__('header_forgot_password_screen')?></h2>
     <form data-ng-submit="buttonSendCodeClicked()" data-form-validator="validator">
 <!--        <input type="submit" style="position: absolute; left: -9999px; width: 1px; height: 1px;"/>-->
-        <div class="form_box-comments">
+        <div class="form_hint">
             <?php NlsHelper::__('message_forgot_password')?>
         </div>
-        <div class="form_field email_login" data-form-field="email" data-check-email="<?php NlsHelper::__('message_validate_email', 'member@'.Util::serverName())?>" data-check-required="<?php NlsHelper::__('message_required');?>">
+        <div class="form_field email_login stretch" data-form-field="email" data-check-email="<?php NlsHelper::__('message_validate_email', 'member@'.Util::serverName())?>" data-check-required="<?php NlsHelper::__('message_required');?>">
             <label><?php NlsHelper::__('label_email')?>:</label>
             <input type="text" data-ng-model="fields.email" />
         </div>
         <div class="form_results">
-            <div data-spinner="spinner"></div>
+            <div data-spinner="spinner" class="form_spinner"></div>
             <div data-form-message class="form_message"></div>
         </div>
         <div class="form_buttons">
