--- a/res/src/ng-modules/chayka-auth.less
+++ b/res/src/ng-modules/chayka-auth.less
@@ -1,9 +1,62 @@
-@vard: '';
 
-.some{
-    color: '';
-}
+#chayka-auth{
+    .form_screen{
+        padding: 0 1ex;
+        width: 320px;
 
-.ng-scope{
-//    border: dashed red 1px;
+        > h2{
+            margin-top: 0;
+            margin-bottom: 1em;
+        }
+
+        > form{
+            > .form_hint{
+                margin-bottom: 2em;
+            }
+
+            > .form_field{
+                > .message{
+                    width: 200px;
+                    text-align: left;
+                    margin-left: 120px;
+                    padding-top: .5ex;
+                    font-size: .8em;
+                }
+            }
+
+            > .form_results{
+                text-align: center;
+                min-height: 30px;
+                margin-bottom: 1.5em;
+                font-size: 14px;
+
+                > .form_spinner{
+
+                }
+                > .form_message{
+
+                }
+            }
+
+            > .form_buttons{
+                text-align: right;
+                margin-bottom: 1em;
+
+                button{
+                    width: 200px;
+                    margin-top: 0;
+                    margin-bottom: 0;
+                }
+            }
+
+        }
+
+    }
+    .nav_links{
+        text-align: right;
+        .link{
+            cursor: pointer;
+            margin: 0 1ex;
+        }
+    }
 }
