--- a/app/views/email/new-password.en.phtml
+++ b/app/views/email/new-password.en.phtml
@@ -6,7 +6,9 @@
 <div>
     <h2>Your new credentials:</h2>
     <dl><dt>email:</dt><dd><?php echo $this->user->getEmail();?></dd></dl>
+    <?php if($this->user->getEmail()!=$this->user->getLogin()):?>
     <dl><dt>name:</dt><dd><?php echo $this->user->getLogin();?></dd></dl>
+    <?php endif;?>
     <dl><dt>password:</dt><dd><?php echo $this->password;?></dd></dl>
     <div class="clearfloat"></div>
 </div>
