--- a/res/src/ng-modules/chayka-auth.less
+++ b/res/src/ng-modules/chayka-auth.less
@@ -23,6 +23,10 @@
                     margin-left: 120px;
                     padding-top: .5ex;
                     font-size: .8em;
+
+                    a{
+                        white-space: nowrap;
+                    }
                 }
             }
 
