--- a/app/views/email/user-registered.en.phtml
+++ b/app/views/email/user-registered.en.phtml
@@ -6,7 +6,13 @@
 <div>
     <h2>Your credentials:</h2>
     <dl><dt>email:</dt><dd><?php echo $this->user->getEmail();?></dd></dl>
+    <?php if($this->user->getEmail()!=$this->user->getLogin()):?>
     <dl><dt>name:</dt><dd><?php echo $this->user->getLogin();?></dd></dl>
+    <?php endif;?>
     <dl><dt>password:</dt><dd><?php echo $this->password;?></dd></dl>
     <div class="clearfloat"></div>
 </div>
+<div>
+    To set a new password, please follow this <a href="http://<?php echo $_SERVER['SERVER_NAME'].'?activationkey='.$this->activationKey. sprintf('%x', $this->user->getId());?>">link</a>
+</div>
+
