--- a/app/views/email/new-password.en.phtml
+++ b/app/views/email/new-password.en.phtml
@@ -1,3 +1,10 @@
+<?php
+    $showName = !in_array($this->user->getLogin(), array(
+        $this->user->getEmail(),
+        str_replace('@', '.', $this->user->getEmail())
+    ));
+?>
+
 <h1>New password for <?php echo $_SERVER['SERVER_NAME'];?>!</h1>
 
 <div>
@@ -6,7 +13,7 @@
 <div>
     <h2>Your new credentials:</h2>
     <dl><dt>email:</dt><dd><?php echo $this->user->getEmail();?></dd></dl>
-    <?php if($this->user->getEmail()!=$this->user->getLogin()):?>
+    <?php if($showName):?>
     <dl><dt>name:</dt><dd><?php echo $this->user->getLogin();?></dd></dl>
     <?php endif;?>
     <dl><dt>password:</dt><dd><?php echo $this->password;?></dd></dl>
